--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="HTML.png" alt="">
                     <div class="items_price">
                         <h3>Programming</h3>
-                        <h2>$49.7</h2>
+                        <h2>$40.7</h2>
                     </div>
                     <div class="items_dur">
                         <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><path d="M160 80c0-26.5 21.5-48 48-48h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V80zM0 272c0-26.5 21.5-48 48-48H80c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V272zM368 96h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H368c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48z"/></svg>
@@ -63,7 +63,7 @@
                         <h3>2.5 hours</h3>
                     </div>
                     <div class="items_dis">
-                        <p>A full packed course for css for a beginner</p>
+                        <p>A full packed course for HTML for a beginner.In this course you will cover all the basics of html.You will learn all the tags in HTML and also you will be geeting a cheatsheet for html.</p>
                     </div>
                     <div class="items_enroll">
                         <button>Enroll</button>
@@ -73,7 +73,7 @@
                     <img src="CSS.png" alt="">
                     <div class="items_price">
                         <h3>Programming</h3>
-                        <h2>$49.7</h2>
+                        <h2>$25</h2>
                     </div>
                     <div class="items_dur">
                         <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><path d="M160 80c0-26.5 21.5-48 48-48h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V80zM0 272c0-26.5 21.5-48 48-48H80c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V272zM368 96h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H368c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48z"/></svg>
@@ -82,7 +82,7 @@
                         <h3>1.6 hours</h3>
                     </div>
                     <div class="items_dis">
-                        <p>A full packed course for css for a beginner</p>
+                        <p>A full packed course for CSS for a beginner.In this course you will cover all the basics of CSS and also you will learn the responsivenes of the webite.</p>
                     </div>
                     <div class="items_enroll">
                         <button>Enroll</button>
@@ -92,7 +92,7 @@
                     <img src="Javascript.png" alt="">
                     <div class="items_price">
                         <h3>Programming</h3>
-                        <h2>$49.7</h2>
+                        <h2>$60.9</h2>
                     </div>
                     <div class="items_dur">
                         <svg xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><path d="M160 80c0-26.5 21.5-48 48-48h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V80zM0 272c0-26.5 21.5-48 48-48H80c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V272zM368 96h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H368c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48z"/></svg>
@@ -101,7 +101,7 @@
                         <h3>3 hours</h3>
                     </div>
                     <div class="items_dis">
-                        <p>A full packed course for css for a beginner</p>
+                        <p>A full packed course for Javascript for a beginner.In this course you will cover all the basics of Javascript and you will learn concept building.You will learn conditional statements and many more.</p>
                     </div>
                     <div class="items_enroll">
                         <button>Enroll</button>
@@ -197,14 +197,6 @@
         </div>
         <footer class="footer" id="Footer">
             <div class="footer_main">
-                <div class="footer_about">
-                    <h1>Code Nest</h1>
-                    <p>Code Nest is a american based company which sells course</p>
-                    <h3>Contact :</h3>
-                    <a href="callto:+91 9314851617">+91 9314851617</a>
-                    <a href="mailto:aayushsharma1715@gmail.com"><button>Email us</button></a>
-                    <h3>&copy; 2024 Code Nest & Co. All rights reserved.</h3>
-                </div>
                 <div class="footer_links">
                     <h2>Links :</h2>
                     <ul>
@@ -223,6 +215,15 @@
                         <li><a href="#Footer">Contact</a></li> 
                     </ul>
                 </div>
+                <div class="footer_about">
+                    <h1>Code Nest</h1>
+                    <h3>Contact :</h3>
+                    <a href="callto:+91 9314851617">+91 9314851617</a>
+                    <a href="mailto:aayushsharma1715@gmail.com"><button>Email us</button></a>
+                    <h3>&copy; 2024 Code Nest & Co.</h3>
+                </div>
+                
+                
                 <div class="footer_comment">
                     <h2>Comments :</h2>
                     <textarea name="Comments" id="Comments" cols="20" rows="5" placeholder="Comments here"></textarea>
