--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rokkitt&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Code Nest</title></title>
     <script>
         function Show_prompt() {
             var name = document.getElementById("name").value
@@ -197,6 +197,13 @@
         </div>
         <footer class="footer" id="Footer">
             <div class="footer_main">
+                <div class="footer_about">
+                    <h1>Code Nest</h1>
+                    <h3>Contact :</h3>
+                    <a href="callto:+91 9314851617">+91 9314851617</a>
+                    <a href="mailto:aayushsharma1715@gmail.com"><button>Email us</button></a>
+                    <h3>&copy; 2024 Code Nest & Co.</h3>
+                </div>
                 <div class="footer_links">
                     <h2>Links :</h2>
                     <ul>
@@ -214,16 +221,7 @@
                         <li><a href="#Demo">Demo Class</a></li>
                         <li><a href="#Footer">Contact</a></li> 
                     </ul>
-                </div>
-                <div class="footer_about">
-                    <h1>Code Nest</h1>
-                    <h3>Contact :</h3>
-                    <a href="callto:+91 9314851617">+91 9314851617</a>
-                    <a href="mailto:aayushsharma1715@gmail.com"><button>Email us</button></a>
-                    <h3>&copy; 2024 Code Nest & Co.</h3>
-                </div>
-                
-                
+                </div>   
                 <div class="footer_comment">
                     <h2>Comments :</h2>
                     <textarea name="Comments" id="Comments" cols="20" rows="5" placeholder="Comments here"></textarea>
